--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "14.0.0",
     "@angular/platform-browser-dynamic": "14.0.0",
     "@angular/router": "14.0.0",
+    "@auth0/auth0-angular": "^1.10.1",
     "@ngrx/store": "14.0.0-beta.0",
     "bootstrap": "4.6.1",
     "core-js": "3.8.0",
