--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "update": "ng update --force @angular/cli @angular/core",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc",
+    "generate-api": "ng-openapi-gen --input http://localhost:3000/api-yaml --output src/app/api"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
@@ -32,7 +33,6 @@
     "@angular/platform-browser-dynamic": "14.0.0",
     "@angular/router": "14.0.0",
     "@auth0/auth0-angular": "^1.10.1",
-    "@ngrx/store": "14.0.0-beta.0",
     "bootstrap": "4.6.1",
     "core-js": "3.8.0",
     "luxon": "2.4.0",
