--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "adminlte": {
+        "opc-ua-dashboard": {
             "projectType": "application",
             "schematics": {
                 "@schematics/angular:component": {
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/adminlte",
+                        "outputPath": "dist/opc-ua-dashboard",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
@@ -73,18 +73,18 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "adminlte:build"
+                        "browserTarget": "opc-ua-dashboard:build"
                     },
                     "configurations": {
                         "production": {
-                            "browserTarget": "adminlte:build:production"
+                            "browserTarget": "opc-ua-dashboard:build:production"
                         }
                     }
                 },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "adminlte:build"
+                        "browserTarget": "opc-ua-dashboard:build"
                     }
                 },
                 "test": {
@@ -109,11 +109,11 @@
                     "builder": "@angular-devkit/build-angular:protractor",
                     "options": {
                         "protractorConfig": "e2e/protractor.conf.js",
-                        "devServerTarget": "adminlte:serve"
+                        "devServerTarget": "opc-ua-dashboard:serve"
                     },
                     "configurations": {
                         "production": {
-                            "devServerTarget": "adminlte:serve:production"
+                            "devServerTarget": "opc-ua-dashboard:serve:production"
                         }
                     }
                 }
