--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "@angular/router": "14.0.0",
     "@auth0/auth0-angular": "^1.10.1",
     "bootstrap": "4.6.1",
+    "chart.js": "^3.9.1",
     "core-js": "3.8.0",
     "luxon": "2.4.0",
+    "ng2-charts": "^4.0.0",
     "ngx-toastr": "14.3.0",
     "process": "0.11.10",
     "rxjs": "6.6.7",
+    "socket.io-client": "^4.5.2",
     "tslib": "2.4.0",
     "uuid": "8.3.2",
     "zone.js": "~0.11.5"
